cmake_minimum_required(VERSION 3.5)
project(pub2-3)

# # Default to C99
# if(NOT CMAKE_C_STANDARD)
#   set(CMAKE_C_STANDARD 99)
# endif()

# Default to C++14
if(NOT CMAKE_CXX_STANDARD)
  set(CMAKE_CXX_STANDARD 14)
endif()

# 컴파일러 경고 옵션 설정
if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

# find dependencies
find_package(ament_cmake REQUIRED) # build tool
find_package(rclcpp REQUIRED) # ROS2 라이브러리
find_package(geometry_msgs REQUIRED) # msg interface

# if(BUILD_TESTING)
#   find_package(ament_lint_auto REQUIRED)
#   # the following line skips the linter which checks for copyrights
#   # uncomment the line when a copyright and license is not present in all source files
#   #set(ament_cmake_copyright_FOUND TRUE)
#   # the following line skips cpplint (only works in a git repo)
#   # uncomment the line when this package is not in a git repo
#   #set(ament_cmake_cpplint_FOUND TRUE)
#   ament_lint_auto_find_test_dependencies()
# endif()

#build
add_executable(pub2-3 src/pub2-3.cpp) # 실행파일 생성 / 소스파일 컴파일하여
ament_target_dependencies(pub2-3 rclcpp geometry_msgs) # 외부 라이브러리 가지고 오는 거

# Install
install(TARGETS # 실행파일을 어디에 설치할 것인지
  pub2-3
  DESTINATION lib/${PROJECT_NAME})

ament_package()
